# zephyr_lvgl_games

./: .gitignore  README.md  west.yml
2048/: CMakeLists.txt  Kconfig  README.md  prj.conf
2048/inc/: config.h  game.h  input.h  ui.h
2048/src/: game.c  input.c  main.c  ui.c
brick_breaker/: CMakeLists.txt  README.md  prj.conf
brick_breaker/src/: main.c
tic_tac_toe/: CMakeLists.txt  README.md  prj.conf
tic_tac_toe/inc/: config.h  game.h  input.h
tic_tac_toe/src/: main.c
tik_tac_toe/: CMakeLists.txt
tik_tac_toe/inc/: ui.h
tik_tac_toe/src/: game.c  input.c  ui.c
